# hermeneia

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  environment.yml  hermeneia.code-workspace  pyproject.toml
.claude/: settings.json
conda.recipe/: meta.yaml
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: conf.py  index.md  proposal.md
docs/adr/: 0001-layered-boundaries.md  0002-document-ir-and-source-views.md  0003-strict-config-and-merge-semantics.md  0004-unified-rule-registration.md  0005-english-first-language-pack.md  architecture-plan.md  index.md
docs/api/: index.md
docs/audits/: math-writing-audit-dimensions.md
docs/guide/: cli-reference.md  configuration.md  getting-started.md  index.md  installation.md  metrics.md  prose-audit-protocol.md  rule-registry.md  sources-and-further-reading.md  usage.md  writing-quality-model.md
docs/internals/: architecture.md  configuration-resolution.md  document-model.md  index.md  language-and-nlp.md  pipeline.md  reporting-and-suggestions.md  rules-and-detection.md  testing-and-benchmarks.md
docs/reference/: audit-documentation.md  bibliography.md  hard-rules.md  index.md  initial-proposal.md  lint-rules-reference.py  math-pedagogy.md  writing-standards.md
docs/rules/: math-pedagogy.md  math-style-hard-rules.md
src/hermeneia/: __init__.py  __main__.py  cli.py
src/hermeneia/config/: __init__.py  defaults.py  loader.py  profile.py  schema.py
src/hermeneia/document/: __init__.py  annotator.py  indexes.py  markdown.py  model.py  parser.py  projection.py  source_view.py
src/hermeneia/engine/: __init__.py  detector.py  registry.py  runner.py
src/hermeneia/infrastructure/: __init__.py  embeddings.py
src/hermeneia/language/: __init__.py  base.py  en.py  registry.py
src/hermeneia/report/: __init__.py  annotations.py  diagnostic.py  revision_plan.py
src/hermeneia/rules/: __init__.py  base.py  common.py  loader.py  patterns.py
src/hermeneia/rules/audience/: __init__.py  acronym_burden.py  claim_calibration.py  definition_before_use.py  imprecise_quantifier_without_citation.py  jargon_density.py  qualitative_claim_without_quant_support.py
src/hermeneia/rules/discourse/: __init__.py  embedding_depth.py  semicolon_connector.py  stress_position.py  subject_verb_distance.py  subordinate_clause.py  transition_quality.py
src/hermeneia/rules/evidence/: __init__.py  claim_calibration.py  imprecise_quantifier_without_citation.py  qualitative_claim_without_quant_support.py
src/hermeneia/rules/linkage/: __init__.py  banned_transition.py  case_scaffolding.py  numbered_case.py  semicolon_connector.py  stress_position.py  transition_quality.py
src/hermeneia/rules/math/: __init__.py  abstract_framing.py  assumption_motivation_order.py  bare_pronoun_after_display.py  bare_symbol.py  consecutive_display_blocks_without_bridge.py  display_ambiguous.py  display_followup_interpretation.py  display_math.py  display_unclosed.py  imperative_opening.py  inline_math.py  proof_marker.py  proof_placement_context.py  prose_math.py  shorthand.py
src/hermeneia/rules/paragraph/: __init__.py  concept_reference_drift.py  double_framing.py  inline_case_split.py  inline_enumeration_overload.py  lexical_repetition.py  literary_parallelism.py  paragraph_redundancy.py  parallelism.py  reformulation_inflation.py  sentence_redundancy.py  topic_sentence.py  vague_rhetorical_opener.py
src/hermeneia/rules/reference/: __init__.py  bare_pronoun_opening.py  citation_as_agent.py  citation_styles.py  citation_tail_parenthetical.py  cross_reference.py  generic_link_text.py  generic_one.py  heading_link.py  personal_pronoun.py  raw_anchor.py  see_link.py  structural_metalanguage.py
src/hermeneia/rules/structure/: __init__.py  _option_parsing.py  declarative_heading.py  heading_capitalization.py  heading_level_skip.py  heading_parallelism.py  opening_message_focus.py  opening_sentence_presence.py  orphan_section.py  (+4 more)
src/hermeneia/scoring/: __init__.py  scorer.py
src/hermeneia/suggest/: __init__.py  planner.py  template.py
src/package_name/: cli.py
tests/: conftest.py
tests/benchmarks/: record_warm_run_benchmark.py
tests/fixtures/annotation_snapshots/: inline_math_code_link.md  inline_math_code_link.snapshot.json  math_heavy_masking.md  math_heavy_masking.snapshot.json
tests/fixtures/benchmarks/: large.md  medium.md  small.md  warm_run_benchmark.json
tests/fixtures/real_world/: handoff_style.md  plan_style.md
tests/integration/: test_annotator_snapshots.py  test_cli.py  test_real_world_fixtures.py
tests/unit/: test_acronym_burden.py  test_benchmark_record.py  test_config_resolution.py  test_definition_before_use.py  test_detector_resilience.py  test_embeddings_pipeline.py  test_feature_store.py  test_hard_rules_policy.py  test_heading_parallelism.py  test_markdown_parser.py  test_nominalization_rule.py  test_projection.py  test_report_annotations.py  test_revision_plan.py  test_rule_inventory.py  test_rule_loading.py  test_rules.py  test_runner_failures.py  test_scoring.py  test_vague_rhetorical_opener.py  test_writing_standards_rules.py
(+63 files in other folders)
